<resources>
    <string name="app_name" formatted="true" translatable="true">the hike</string>
    <string name="usernameHint">Enter your User Name</string>
    <string name="userEmail">Enter your Email address</string>
    <string name="signuBtn">Sign up</string>
    <string name="logInGoogle">Log in With Google</string>
    <string name="appbarSearch">Locations,Routes,User settings</string>
    <string name="menuItem1">My Account</string>
    <string name="menuItsm2">My Routes</string>
    <string name="menuItsm3">Sign Out</string>
    <string name="myRoutes">My Routes</string>
    <string name="myRoutesSub">These are the routes created by yourself prevoulsly</string>
    <string name="content_description_media">myRoutsImgDes</string>
    <string name="go_to_my_routes">Go to my Routes</string>
    <string name="create_new">Create new</string>
    <string name="explore">Explore Routes</string>
    <string name="have_you_ever_gone_to_some_places_you_know_tell_us_all_all_about_em">Have you ever gone to some places you know. Tell us all all about em\'</string>
    <string name="createNewRoute">Create new Route</string>
    <string name="exploreRoutes">Explore</string>
    <string name="use_our_pre_created_routes">Use our pre created Routes</string>
    <string name="google_map_api_key">AIzaSyCFex148NJ2tbLolEZMfRnVvDAQmZZiUro</string>
    <string name="save">Save</string>
    <string name="distance_from_colombo">Distance from Colombo</string>
    <string name="time_taken_to_travel_from_colombo">Time taken to travel from colombo?</string>
    <string name="by_bus">By bus</string>
    <string name="by_train">By Train</string>
    <string name="by_flight">By Flight</string>
    <string name="on_foot">On Foot</string>
    <string name="travelling_methods_you_know">Travelling Methods You Know...</string>
    <string name="location_one">Location one</string>
    <string name="go_to_next_destination">Go to next destination</string>
    <string name="location_two">Location Two</string>
    <string name="distance_from_location_one_to_location_two">Distance from Location one to Location two</string>
    <string name="time_take_to_travel_from_location_one_to_location_two">Time take to travel from location one to location two</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="add_tags_to_make_this_route_searchable">Add tags to make this route searchable</string>
    <string name="add_location_tags">Add Location Tags</string>
    <string name="addTag">+</string>
    <string name="my_first_route">My First Route</string>
    <string name="my_route_one">My Route One</string>
    <string name="starting_location">Starting Location : Colombo</string>
    <string name="destination">Destination : Colombo</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="location_1">Location 1</string>
    <string name="location_2">Location 2</string>
    <string name="location_3">Location 3</string>
    <string name="location_4">Location 4</string>
    <string name="location_5">Location 5</string>
    <string name="edit_the_location">Edit the Location</string>
    <string name="update_info">Update Info</string>


    <string name="firstTopic">Categories of Restaurants</string>
    <string name="CategoryTopic1">Cake and Pastry Shops</string>
    <string name="CategoryTopic2">Beverages</string>
    <string name="CategoryTopic3">Coffee and Juices</string>
    <string name="CategoryTopic4">Western Cuisine</string>
    <string name="fab_content_desc">+</string>
    <string name="paragraph">Lorem ipsum dolor sit amet, consec</string>
    <string name="paragraph1">A cake and pastry shop is a retail business specializing in selling cakes and shorteats</string>
    <string name="paragraph2">A beverage shop is a retail business specializing in soft drinks,juices, and special drinks </string>
    <string name="paragraph3">A coffee and juices is a retail business specializing in coffee and related coffee types</string>
    <string name="paragraph4">A western cuisine is a retail business specializing in western cultural foods</string>

    <string name="firstpage">Add My Restaurant</string>
    <string name="page_title">Cafe &amp; Restaurant</string>
    <string name="first_title">Add Restaurant</string>
    <string name="fillForm">*Fill the form</string>
    <string name="Name">NAME</string>
    <string name="Address">ADDRESS</string>
    <string name="Category">CATEGORY</string>
    <string name="Contact">CONTACT</string>
    <string name="Email">EMAIL </string>

    <string name="Continue">CONTINUE</string>
    <string name="hintName">Restaurant Name</string>
    <string name="hintAddress1">Line1</string>
    <string name="hintAddress2">Line2</string>
    <string name="hintAddressCity">City</string>
    <string name="hintCategory">CATEGORY</string>
    <string name="hintContact">07xxxxxxxxxx</string>
    <string name="hintEmail">abc@gmail.com</string>
    <string-array name="categories">
        <item>Cake and Pastry</item>
        <item>Beverages</item>
        <item>Coffee and Juices</item>
        <item>Western Cuisine</item>
    </string-array>

    <string name="second_title">Add Menu</string>
    <string name="price">PRICE</string>
    <string name="discount">DISCOUNT</string>
    <string name="amount">AMOUNT</string>
    <string name="menu_name">Menu name</string>
    <string name="hintPrice">Rupees</string>
    <string name="hintDiscount">eg:5 (percentage)</string>
    <string name="hintAmount">Amount to be paid</string>
    <string name="calButton">Calculate</string>
    <string name="add">Add to Menu</string>
    <string name="update">UPDATE</string>
    <string name="home">HOME</string>
    <string name="myRest">My Restaurants</string>

    <string name="menu_list">Menu List</string>
    <string name="menu_name1">Orange juice</string>
    <string name="menu_price1">250</string>
    <string name="menu_disc1">0</string>
    <string name="menu_amount1">250</string>
    <string name="menu_name2">Faluda</string>
    <string name="menu_price2">300</string>
    <string name="menu_disc2">10</string>
    <string name="menu_amount2">270</string>
    <string name="hintRestaurantName">Restaurant Name</string>

    <string name="forth_title">My Restaurants</string>
    <string name="viewMenubtn">View Menu</string>
    <string name="Res1Name">Asian Restaurant</string>
    <string name="Res2Name">Western Cuisine</string>
    <string name="place1">Highlevel Rd,Nugegoda</string>
    <string name="place2">Kohuwala,Nugegoda</string>
    <string name="addRestaurant">Add Restaurant</string>

    <string name="home_title">THE HIKE</string>
    <string name="home_welcome">WELCOME!</string>
    <string name="home_sentence">Select Your Preference...</string>
    <string name="home_user">USER</string>
    <string name="home_hotel">HOTEL</string>
    <string name="home_cafe">CAFE</string>
    <string name="home_shops">SHOPS</string>
    <string name="viewMore">view</string>
    <string name="calculationTitle">CALCULATION</string>
    <string name="enjoySentence">Enjoy The Day!</string>


    <string name="sign_in">Sign In</string>
    <string name="enter_your_email_address_or_userame">Enter your email address or userame</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_user_name">Enter your user name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="sign_up">Sign Up</string>



    <string name="landingPageText1">ARE YOU A BUSINESS OWNER OR AN ENTREPRENEUR?</string>
    <string name="landingPageText2">We provide you the best way to promote your business</string>
    <string name="category1">FASHION</string>
    <string name="category2">FOOTWEAR</string>
    <string name="category3">JEWELRY</string>
    <string name="category4">BABY CARE</string>
    <string name="store">Store Name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="branches">Branches</string>
    <string-array name="category_list">
        <item>Fashion</item>
        <item>Footwear</item>
        <item>Jewelry</item>
        <item>Baby Care</item>
    </string-array>
    <string-array name="styleList">
        <item>Women</item>
        <item>Men</item>
        <item>Girl</item>
        <item>Boy</item>
    </string-array>
    <string name="heading">Add Your Store</string>
    <string name="enter_thr_route_name">Enter thr Route Name</string>
    <string name="location_2_menu"><![CDATA[Location 2 /> </menu>]]></string>

    <string name="updated_item_name">Item Name</string>
    <string name="update_item_price">Item Price</string>
    <string name="update_item_desc">Description</string>
    <string name="update_item_offers">Special Offers/Discounts</string>
    <string name="update_item">edit</string>
    <string name="delete_item">delete</string>
    <string name="store_Name">store_name_item</string>
    <string name="add_item_namee">itemName</string>
    <string name="add_item_price">Item Price</string>
    <string name="add_item_cate">Category</string>
    <string name="add_item_desc">Description</string>
    <string name="add_item_offers">Special Offers/Discounts</string>
    <string name="add_item">add store items</string>
    <string name="add_myItems">go to my items</string>
    <string name="add_storeitems">S  T  O  R  E    I T  E  M  S</string>
    <string name="addStore">Add store</string>
    <string name="update_store">Store Name</string>
    <string name="update_store_desc">Description</string>
    <string name="update_store_loc">Location</string>
    <string name="update_store_branch">Branches</string>
    <string name="edit_store">edit</string>
    <string name="delete_store">delete</string>
    <string name="list_storeName">Store Name</string>
    <string name="list_storeDesc">Description</string>
    <string name="list_storeCat">Category</string>
    <string name="list_store_loc">Location</string>
    <string name="list_store_branch">Branches</string>
    <string name="list_itemName">Item Name</string>
    <string name="list_itemPrice">Price</string>
    <string name="list_itemCat">Category</string>
    <string name="list_itemDesc">Description</string>
    <string name="list_itemOffers">Offers</string>
    <string name="add_item_name">item Name</string>
    <string name="listview_items">add more items</string>
    <string name="listView_stores">add more stores</string>
    <string name="mystores">my stores</string>
    <string name="my_stores">my stores</string>

    <string name="shops_hotels_and_resturents_nearby">Shops, Hotels and Resturents nearby</string>
    <string name="search_nearby">Search NearBy</string>
    <string name="route_name">Route Name :</string>
    <string name="additional_details">Additional Details :</string>
    <string name="location_2_name">Location 2 name :</string>
    <string name="location_1_name">Location 1 name :</string>
    <string name="show_details">Show details</string>



</resources>